# chameleon-os

./: .gitignore  AGENT_BRIEFING.md  ARCHITECTURE_DIAGRAM.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.txt  FINAL_STARTUP_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  MASTER_BLUEPRINT.md  QUICK_REFERENCE.md  README.md  TESTING_CHECKLIST.md  deploy.bat  deploy.sh  partitions.csv  platformio.ini  sdkconfig  sdkconfig.defaults  sdkconfig.esp32s3  🦎 CHAMELEON OS_ VS CODE AGENT HYPER-PROMPT.md
components/bsp/: CMakeLists.txt  bsp_display.c  bsp_display.h  bsp_qmi8658.h  bsp_touch.c
include/: app_framework.h  app_registry.h  event_bus.h  hal.h  theme_manager.h  ui_framework.h
lib/bsp/: bsp_battery.h  bsp_display.c  bsp_qmi8658.c  bsp_touch.h
lib/lcd_drivers/: CMakeLists.txt
main/: CMakeLists.txt  idf_component.yml  lvgl_ui.c  lvgl_ui.h  main.c  ui_components.c  ui_components.h  ui_fonts.c  ui_router.c  ui_router.h  ui_theme.c  ui_theme.h
src/: main.c  main.cpp
src/apps/: app_framework.cpp  app_registry.cpp
src/apps/sector1_productivity/: app_clock.cpp  app_home.cpp  sector1_apps.cpp
src/apps/sector2_communication/: app_wifi.cpp  sector2_apps.cpp
src/apps/sector3_media/: sector3_apps.cpp
src/apps/sector4_tools/: sector4_apps.cpp
src/apps/sector5_lifestyle/: sector5_apps.cpp
src/apps/sector6_games/: sector6_apps.cpp
src/core/: event_bus.cpp  theme_manager.cpp  ui_framework.cpp
src/hal/: display_hal.cpp  ntp_hal.cpp  touch_hal.cpp  wifi_hal.cpp
